@@ -139,8 +139,8 @@ totest['contents'] = [
 <document source="test data">
     <system_message level="3" source="test data" type="ERROR">
         <paragraph>
-            Error in "contents" directive attributes at line 1:
-            invalid attribute value: (attribute: "depth"; value: 'two')
+            Error in "contents" directive options at line 1:
+            invalid option value: (option: "depth"; value: 'two')
             invalid literal for int(): two.
         <literal_block xml:space="1">
             .. contents::
@@ -154,8 +154,8 @@ totest['contents'] = [
 <document source="test data">
     <system_message level="3" source="test data" type="ERROR">
         <paragraph>
-            Error in "contents" directive attributes at line 1:
-            unknown attribute: "width".
+            Error in "contents" directive options at line 1:
+            unknown option: "width".
         <literal_block xml:space="1">
             .. contents::
                :width: 2
@@ -168,8 +168,8 @@ totest['contents'] = [
 <document source="test data">
     <system_message level="3" source="test data" type="ERROR">
         <paragraph>
-            Error in "contents" directive attributes at line 1:
-            invalid attribute value: (attribute: "backlinks"; value: 'no way!')
+            Error in "contents" directive options at line 1:
+            invalid option value: (option: "backlinks"; value: 'no way!')
             "no way!" unknown; choose from "top", "entry", or "none".
         <literal_block xml:space="1">
             .. contents::
@@ -183,8 +183,8 @@ totest['contents'] = [
 <document source="test data">
     <system_message level="3" source="test data" type="ERROR">
         <paragraph>
-            Error in "contents" directive attributes at line 1:
-            invalid attribute value: (attribute: "backlinks"; value: None)
+            Error in "contents" directive options at line 1:
+            invalid option value: (option: "backlinks"; value: None)
             must supply an argument; choose from "top", "entry", or "none".
         <literal_block xml:space="1">
             .. contents::
